--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,79 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   }
-body{
-    display: grid;
-    place-items: center;
-    background: #F0F0F0;
-    font: ;
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.container{
-    width: 600px;
-    padding: 20px;
-    margin: 15px;
-    text-align: justify;
-    background: white;
-    border-radius: 5px;
+body {
+  display: grid;
+  place-items: center;
+  background: #eaeaea;
+  font-family: 'Roboto', sans-serif;
+}
+.container {
+  width: 700px;
+  padding: 20px;
+  margin: 15px;
+  text-align: justify;
+  background: white;
+  border-radius: 5px;
+}
+header {
+  display: grid;
+}
+figure > img {
+  width: 100%;
+  height: 250px;
 
-}
-header{
-    display: grid;
-}
-figure>img{
-width: 100%;
-height: 250px;
-
-padding: 2px;
-border-radius: 5px;
+  padding: 2px;
+  border-radius: 5px;
 }
 
-figure figcaption{
-    color: #8F8F8F;
-    text-align: end;
+figure figcaption {
+  color: #8f8f8f;
+  text-align: end;
+  font-size: 12px;
 }
 
-section{
-    padding: 5px;
-    display: grid;
-    background: #FFFFFF;
-    
+section {
+  padding: 5px;
+  display: grid;
+  background: #ffffff;
 }
-section>ul>li{
-    list-style-position: outside;
-}
-h2{
-    padding: 5px;
-    color: #1B1B1B;
-}
-footer p{
-    height: 100px;
-    display: grid;
-    place-items: center;
-    align-items: center;
+section > ul > li,
+section > ol > li {
+  list-style-position: inside;
 
-    color: #8F8F8F;
+  line-height: 26px;
+}
+h1 {
+  font-size: 28px;
+}
+h2 {
+  font-size: 20px;
+}
 
+h1,
+h2 {
+  text-align: center;
+  padding: 15px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  color: #1b1b1b;
+  font-weight: 700;
+
+  text-transform: uppercase;
+}
+
+p {
+  font-weight: 400;
+}
+footer p {
+  height: 100px;
+  display: grid;
+  place-items: center;
+  align-items: center;
+
+  color: #8f8f8f;
+
+  font-size: 12px;
 }
